# cppfan

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  FILE_MANIFEST.md  FILE_MANIFEST_AUTH_PATCH.md  FILE_MANIFEST_PROFILE_ONBOARDING_PATCH.md  LICENSE  PATCH_README.md  README.md  eslint.config.mjs  issue-485-foundation-exercises-reviewed.patch  next.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  proxy.ts  tsconfig.json  tsconfig.tsbuildinfo  vercel.json  vitest.config.ts  vitest.integration.config.ts  vitest.quiet.config.ts
.claude/: UNFINISHED_WORK.md
.devcontainer/: devcontainer.json  setup.sh
.githooks/: post-checkout  post-commit  post-merge  post-rewrite
.github/: pull_request_template.md
app/: globals.css  layout.tsx  not-found.tsx  page.tsx
components/: build-info-footer.tsx  item-help-links.tsx  learning-loop-diagram.tsx  page-shell.tsx
docs/: AI_CHAT.md  AI_GUARDRAILS.md  AI_PROVIDER_SETTINGS_STATUS.md  AI_TOKEN_EFFICIENCY.md  AI_TOKEN_MEASUREMENT.md  ARCHITECTURE.md  AUTH_SETUP.md  CAPSTONE_PROJECTS.md  CODE_LAB.md  CODE_LAB_PROGRESS.md  CONTENT_EXPANSION_PLAN.md  CURRICULUM_EXAMPLES.md  DEVELOPMENT_PLAN.md  EVENT_SCHEMA.md  EVENT_SCHEMA_STABLE_NAMES.md  EXERCISE_CATALOG_COVERAGE.md  EXERCISE_CATALOG_REVIEW_RUBRIC.md  ISSUE_PARENT_MAPPING.md  JUDGE0_REAL_RUNNER_CI.md  NEXT_APP_SCAFFOLD.md  PLAYWRIGHT_E2E.md  PROFILE_ONBOARDING.md  PROJECT_BRIEF.md  QA_AUTOMATION.md  QUESTION_FAMILIES.md  RELEASES.md  ROADMAP_ISSUES.md  SKILL_ENGINE.md  STUDY_GOAL_FOUNDATION.md  TERMINAL_REAL_SERVICE_CI.md  TEST_ENVIRONMENTS.md  USER_CONTENT.md  WRITE_CODE_EXERCISES.md  chatgpt-project-instructions.md  generated-skill-sample-code-fallback.md  (+1 more)
exercises/concurrency-task-queue/: CMakeLists.txt  README.md  exercise.json
exercises/concurrency-task-queue/solution/: bounded_task_queue.hpp
exercises/concurrency-task-queue/starter/: bounded_task_queue.hpp
exercises/concurrency-task-queue/tests/: tests.cpp
exercises/tooling-status-parser/: CMakeLists.txt  README.md  exercise.json
exercises/tooling-status-parser/solution/: status_parser.hpp
exercises/tooling-status-parser/starter/: status_parser.hpp
exercises/tooling-status-parser/tests/: tests.cpp
(+2084 files in other folders)
